2011-12-08 Upgraded Beaver to version 0.9.9
    The new version of Beaver uses a new naming convention for the Beaver jar
    files, an effect of this is that the jar file used for Ant tasks is now
    called beaver-ant.jar. Extensions using Beaver in their Ant scripts by
    referencing Java1.4Frontend/tools/beaver.jar should be updated to reference
    Java1.4Frontend/tools/beaver-ant.jar instead.

2011-11-23 Added automatic version number update to build scripts for JJ7.

2011-09-24 Updated the JastAdd2 tool to version R20110924.

2011-09-15 Added isDefaultConstructor flag to ConstructorDecl. Pretty printing
    now ignores auto-generated default constructors. Extensions that rely on
    pretty printing to generate default constructors should refine the
    setDefaultConstructor method to make it do nothing.

2011-06-03 Refactored the Java AST. CatchClause is now an abstract base class
    for BasicCatch, which fills the same role that CatchClause previously had.
    Extensions that use the old CatchClause node type will have to in some
    cases move attribute refines etc. to BasicCatch.

2011-05-12 Modified build files to use more heap memory when running JastAdd2
    using an exec task.

2011-04-01 Errors and warnings are printed on the error stream instead of the
    standard output stream.

2011-08-09 Added build file to root JastAddJ directory with clean target that
    cleans all JastAddJ modules.

2011-08-09 Refactored VariableDeclaration.jrag - moved interface Variable to
    Variable.jadd
