@@ -248,7 +248,7 @@
 			<fileset dir="${basedir}" includes="**/*.properties"/>
 			<manifest>
 				<attribute name="Main-Class"
-					value="JavaCompiler"/>
+					value="org.jastadd.jastaddj.JavaCompiler"/>
 			</manifest>
 		</jar>
 	</target>
