@@ -1,3 +1,7 @@
+2012-02-18 Moved the Java7Backend compiler main class to
+    org.jastadd.jastaddj.JavaCompiler. A main class with the same name remains
+    in the default package, for backwards compatibility.
+
 2011-12-08 Upgraded Beaver to version 0.9.9
     The new version of Beaver uses a new naming convention for the Beaver jar
     files, an effect of this is that the jar file used for Ant tasks is now
